--- a/Wpf/WpfText.da.resx
+++ b/Wpf/WpfText.da.resx
@@ -1030,6 +1030,14 @@ Klik eller tryk på Næste for at fortsætte.</value>
     <value>Grindstone 5.</value>
     <comment>from GoogleTranslator2</comment>
   </data>
+  <data name="SnackbarStopwatchSelectionModeAssignment" xml:space="preserve">
+    <value>Vælg en opgave for at begynde at tidsindstille den.</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
+  <data name="SnackbarStopwatchSelectionModeWorkItem" xml:space="preserve">
+    <value>Vælg et arbejdsemne for at begynde at tidsindstille det.</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
   <data name="StatusProviderNameMainWindowDataContext" xml:space="preserve">
     <value>brugergrænseflade</value>
     <comment>from GoogleTranslator2</comment>
