--- a/Wpf/WpfText.fi.resx
+++ b/Wpf/WpfText.fi.resx
@@ -1030,6 +1030,14 @@ Jatka napsauttamalla tai napauta.</value>
     <value>Grindstone 5</value>
     <comment>from GoogleTranslator2</comment>
   </data>
+  <data name="SnackbarStopwatchSelectionModeAssignment" xml:space="preserve">
+    <value>Valitse tehtävä aloittaaksesi sen ajoituksen.</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
+  <data name="SnackbarStopwatchSelectionModeWorkItem" xml:space="preserve">
+    <value>Valitse työkohde aloittaaksesi sen ajoituksen.</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
   <data name="StatusProviderNameMainWindowDataContext" xml:space="preserve">
     <value>Käyttöliittymä</value>
     <comment>from GoogleTranslator2</comment>
