--- a/Wpf/WpfText.fr.resx
+++ b/Wpf/WpfText.fr.resx
@@ -1030,6 +1030,14 @@ Cliquez sur ou appuyez sur Suivant pour continuer.</value>
     <value>Grindstone 5</value>
     <comment>from GoogleTranslator2</comment>
   </data>
+  <data name="SnackbarStopwatchSelectionModeAssignment" xml:space="preserve">
+    <value>Sélectionnez un devoir pour commencer à le chronométrer.</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
+  <data name="SnackbarStopwatchSelectionModeWorkItem" xml:space="preserve">
+    <value>Sélectionnez un élément de travail pour commencer à le chronométrer.</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
   <data name="StatusProviderNameMainWindowDataContext" xml:space="preserve">
     <value>Interface utilisateur</value>
     <comment>from GoogleTranslator2</comment>
