--- a/Wpf/WpfText.it.resx
+++ b/Wpf/WpfText.it.resx
@@ -1030,6 +1030,14 @@ Fai clic o tocca Avanti per continuare.</value>
     <value>Grindstone 5.</value>
     <comment>from GoogleTranslator2</comment>
   </data>
+  <data name="SnackbarStopwatchSelectionModeAssignment" xml:space="preserve">
+    <value>Seleziona un compito per iniziare a cronometrarlo.</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
+  <data name="SnackbarStopwatchSelectionModeWorkItem" xml:space="preserve">
+    <value>Seleziona un elemento di lavoro per iniziare a cronometrarlo.</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
   <data name="StatusProviderNameMainWindowDataContext" xml:space="preserve">
     <value>Interfaccia utente</value>
     <comment>from GoogleTranslator2</comment>
