--- a/Wpf/WpfText.pl.resx
+++ b/Wpf/WpfText.pl.resx
@@ -1030,6 +1030,14 @@ Kliknij lub dotknij Dalej, aby kontynuować.</value>
     <value>Grindstone 5.</value>
     <comment>from GoogleTranslator2</comment>
   </data>
+  <data name="SnackbarStopwatchSelectionModeAssignment" xml:space="preserve">
+    <value>Wybierz zadanie, aby rozpocząć jego mierzenie.</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
+  <data name="SnackbarStopwatchSelectionModeWorkItem" xml:space="preserve">
+    <value>Wybierz element pracy, aby rozpocząć jego odliczanie.</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
   <data name="StatusProviderNameMainWindowDataContext" xml:space="preserve">
     <value>Interfejs użytkownika</value>
     <comment>from GoogleTranslator2</comment>
