--- a/Wpf/WpfText.ru.resx
+++ b/Wpf/WpfText.ru.resx
@@ -1030,6 +1030,14 @@
     <value>Grindstone 5.</value>
     <comment>from GoogleTranslator2</comment>
   </data>
+  <data name="SnackbarStopwatchSelectionModeAssignment" xml:space="preserve">
+    <value>Выберите задание, чтобы начать отсчет времени.</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
+  <data name="SnackbarStopwatchSelectionModeWorkItem" xml:space="preserve">
+    <value>Выберите рабочий элемент, чтобы начать синхронизацию.</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
   <data name="StatusProviderNameMainWindowDataContext" xml:space="preserve">
     <value>Пользовательский интерфейс</value>
     <comment>from GoogleTranslator2</comment>
