--- a/Wpf/WpfText.sk.resx
+++ b/Wpf/WpfText.sk.resx
@@ -1030,6 +1030,14 @@ Pokračujte kliknutím na tlačidlo Ďalej.</value>
     <value>Grindstone 5</value>
     <comment>from GoogleTranslator2</comment>
   </data>
+  <data name="SnackbarStopwatchSelectionModeAssignment" xml:space="preserve">
+    <value>Vyberte úlohu a začnite ju merať.</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
+  <data name="SnackbarStopwatchSelectionModeWorkItem" xml:space="preserve">
+    <value>Vyberte pracovnú položku a začnite ju merať.</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
   <data name="StatusProviderNameMainWindowDataContext" xml:space="preserve">
     <value>Používateľské rozhranie</value>
     <comment>from GoogleTranslator2</comment>
