--- a/Wpf/WpfText.sv.resx
+++ b/Wpf/WpfText.sv.resx
@@ -1030,6 +1030,14 @@ Klicka eller Tryck på Nästa för att fortsätta.</value>
     <value>Slipstone 5</value>
     <comment>from GoogleTranslator2</comment>
   </data>
+  <data name="SnackbarStopwatchSelectionModeAssignment" xml:space="preserve">
+    <value>Välj en uppgift för att börja tajma den.</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
+  <data name="SnackbarStopwatchSelectionModeWorkItem" xml:space="preserve">
+    <value>Välj ett arbetsobjekt för att börja tajma det.</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
   <data name="StatusProviderNameMainWindowDataContext" xml:space="preserve">
     <value>Användargränssnitt</value>
     <comment>from GoogleTranslator2</comment>
